# furnace-sim

./: .gitignore  CMakeLists.txt  README.md
config/: param.yaml
src/: furnace-sim.cpp
